syntax = "proto3";

package pb;
option go_package=".;pb";

import "google/api/annotations.proto";
// message Greet {
//     string msg = 1;
// }
message GreetRequest {
    // Greet sendGreet = 1;
    string say = 1;
}

message GreetResponse {
    // Greet ReceiveGreet = 1;
    string receive = 1;
}

service Hello {
    rpc TestGreet(GreetRequest) returns (GreetResponse) {
        option (google.api.http) = {
            get: "/greet"
        };
    };
}